--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
-
-	<title>Svelte app</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Tic Tac Toe</title>
 
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./bundle.css'>
