added responsive images

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,20 @@
 	<script defer src='./bundle.js'></script>
 </head>
 <body>
+	<img class="bg" srcset="
+	/images/bg_wsdq83_c_scale,w_200.jpg 200w,
+	/images/bg_wsdq83_c_scale,w_396.jpg 396w,
+	/images/bg_wsdq83_c_scale,w_607.jpg 607w,
+	/images/bg_wsdq83_c_scale,w_737.jpg 737w,
+	/images/bg_wsdq83_c_scale,w_833.jpg 833w,
+	/images/bg_wsdq83_c_scale,w_942.jpg 942w,
+	/images/bg_wsdq83_c_scale,w_1059.jpg 1059w,
+	/images/bg_wsdq83_c_scale,w_1158.jpg 1158w,
+	/images/bg_wsdq83_c_scale,w_1253.jpg 1253w,
+	/images/bg_wsdq83_c_scale,w_1316.jpg 1316w,
+	/images/bg_wsdq83_c_scale,w_1397.jpg 1397w,
+	/images/bg_wsdq83_c_scale,w_1400.jpg 1400w,
+	" alt="background image"
+	src="/images/bg_wsdq83_c_scale,w_1059.jpg 1059w">
 </body>
 </html>
